--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=5.4.0",
-    "phpspec/phpspec": "master"
+    "phpspec/phpspec": "master",
+    "winks/m2php": "*"
   }
 }
