--- a/mongrel2.conf
+++ b/mongrel2.conf
@@ -1,4 +1,4 @@
-hello_handler = Handler(
+tertius = Handler(
     send_spec='tcp://*:9997', 
     send_ident='ab206881-6f49-4276-9db1-1676bfae18b0',
     recv_spec='tcp://*:9996', recv_ident=''
@@ -14,7 +14,7 @@ main = Server(
     pid_file="./run/mongre2.pid",
     port=6767,
     hosts = [
-        Host(name="localhost", routes={'/':hello_handler})
+        Host(name="localhost", routes={'.':tertius})
     ]
 )
 
