--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=5.4.0",
-    "phpspec/phpspec": "master"
+    "phpspec/phpspec": "master",
+    "mustache/mustache": "v2.0.2"
   }
 }
